--- a/index.html
+++ b/index.html
@@ -1,21 +1,53 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+
 <body>
-    <nav>
-        <ul>
-            <li><a href="#" onclick="showSection('home')">Inicio</a></li>
-            <li><a href="#" onclick="showSection('projects')">Proyectos</a></li>
-            <li><a href="#" onclick="showSection('contact')">Contacto</a></li>
-        </ul>
-        <input type="text" id="searchBar" placeholder="Buscar proyectos..." oninput="searchProjects()">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Menu</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Sobre mi</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Proyectos</a>
+                    </li>
+                    <li class="nav-item"></li>
+                        <a class="nav-link" href="#">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
-    
+    <h2>Sobre mi</h2>
+    <p>Hola, soy Nahia Labiano Etulain tengo 18 años y soy estudiante de Administración de Sistemas Informáticos en Red
+        en CIP Cuatrovientos.
+    </p>
+    <p>En cuanto a mis gustos, soy una persona a la que le gusta viajar mucho y me encantaría poder visitar todo el mundo.
+        Por ahora no he tenido muchas oportunidades de viajar mucho pero espero que dentro de unos años la cantidad de los
+        países que he visitado haya aumentado.
+    </p>
+    <h2>Estudios</h2>
+    <p>En cuanto a mis estudios, hice la ESO en Mendaur BHI el cual esta situado en Doneztebe y después de estos 4 años
+        fui a Lekaroz BHI ha hacer bachiller. Al acabar bachiller hice selectividad pero no en vez de ir a la universidad
+        decidí hacer un grado superior de informática en CIP Cuatrovientos.
+    </p>
+    <h2>Proyectos</h2>
+    <h2>Contacto</h2>
     <footer>
         <div class="row">
             <div class="col-lg-12">
@@ -25,7 +57,12 @@
     </footer>
 
     <script src="./js/jquery-3.7.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
