--- a/index.html
+++ b/index.html
@@ -32,18 +32,16 @@
                 </ul>
             </div>
         </div>
-    </nav>
+    </nav>           
     <h2>Sobre mi</h2>
     <p>Hola, soy Nahia Labiano Etulain tengo 18 años y soy estudiante de Administración de Sistemas Informáticos en Red
         en CIP Cuatrovientos.
     </p>
-    <p>En cuanto a mis gustos, soy una persona a la que le gusta viajar mucho y me encantaría poder visitar todo el mundo.
-        Por ahora no he tenido muchas oportunidades de viajar mucho pero espero que dentro de unos años la cantidad de los
-        países que he visitado haya aumentado.
-    </p>
+    <p>Soy una persona a la que le encanta viajar y me encantaría poder visitar todo el mundo. Por ahora no he podido
+        visitar muchos países pero espero que dentro de unos años esto cambie.
     <h2>Estudios</h2>
-    <p>En cuanto a mis estudios, hice la ESO en Mendaur BHI el cual esta situado en Doneztebe y después de estos 4 años
-        fui a Lekaroz BHI ha hacer bachiller. Al acabar bachiller hice selectividad pero no en vez de ir a la universidad
+    <p>En cuanto a mis estudios, hice la ESO en mi pueblo, Doneztebe, en el instituto Mendaur BHI  y después de esos 4 años
+        fui a Lekaroz BHI a hacer bachiller. Al acabar bachiller hice selectividad pero en vez de ir a la universidad
         decidí hacer un grado superior de informática en CIP Cuatrovientos.
     </p>
     <h2>Proyectos</h2>
