--- a/index.html
+++ b/index.html
@@ -146,6 +146,31 @@
     <script src="./js/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <script>
+        $(document).ready(function() {
+            $('#formularioContacto').on('submit', function(event) {
+                event.preventDefault();
+                if ($('#email').val() && $('#mensaje').val()) {
+                    alert('Formulario enviado correctamente. ¡Gracias!');
+                } else {
+                    alert('Por favor, completa todos los campos.');
+                }
+            });
+
+            $('#buscador').on('submit', function(event) {
+                event.preventDefault();
+                let query = $(this).find('input').val().toLowerCase();
+                $('.card').each(function() {
+                    let projectTitle = $(this).find('.card-title').text().toLowerCase();
+                    if (projectTitle.includes(query)) {
+                        $(this).show();
+                    } else {
+                        $(this).hide();
+                    }
+                });
+            });
+        });
+    </script>
 </body>
 
 </html>
