informacion de los proyectos

--- a/index.html
+++ b/index.html
@@ -63,9 +63,12 @@
                         <img src="./fotos/664635acbd6dc.jpeg" class="card-img-top" alt="Imagen de I3">
                         <div class="card-body">
                             <h5 class="card-title">I3</h5>
-                            <p class="card-text">Descripción breve del proyecto I3.</p>
-                            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalI3">Más
-                                información</button>
+                            <p class="card-text">
+                                I3 es un proyecto colaborativo de los centros Cuatrovientos y Salesianos Pamplona, enfocado 
+                                en crear soluciones tecnológicas para ayudar a personas con dificultades en el entorno 
+                                educativo y comunitario.
+                            </p>
+                            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalI3">Más información</button>
                         </div>
                     </div>
                 </div>
@@ -79,7 +82,14 @@
                             </div>
                             <div class="modal-body">
                                 <img src="./fotos/664635acbd6dc.jpeg" class="img-fluid mb-3" alt="Imagen de I^3">
-                                Información detallada sobre el proyecto I3.
+                                I3 es el proyecto que desarrollamos en colaboración entre Cuatrovientos y Salesianos Pamplona. 
+                                El propósito de este proyecto es crear soluciones tecnológicas que aborden diversas problemáticas 
+                                en el entorno educativo y comunitario, especialmente dirigidas a personas con dificultades. 
+                                Mediante un enfoque de Aprendizaje y Servicio intermodular, interciclos e intercentros, los 
+                                estudiantes de ambos centros trabajan juntos para desarrollar soluciones electrónicas y digitales 
+                                que mejoren la accesibilidad y el bienestar de las personas en su comunidad. Este proyecto nos 
+                                permitió aplicar nuestras habilidades en tecnología y diseño, al mismo tiempo que contribuimos a la 
+                                mejora de nuestra comunidad local. Fue una experiencia muy enriquecedora y significativa.
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
@@ -89,10 +99,13 @@
                 </div>
                 <div class="col-md-6">
                     <div class="card">
-                        <img src="./fotos/KRISEILU2.png" class="card-img-top" alt="Imagen de Kaixomundua">
+                        <img src="./fotos/logotipo_kaixomundua-1.jpg" class="card-img-top" alt="Imagen de Kaixomundua">
                         <div class="card-body">
-                            <h5 class="card-title">Kaixomundua</h5>
-                            <p class="card-text">Descripción breve del proyecto Kaixomundua.</p>
+                            <h5 class="card-title">Kaixomundua.eus</h5>
+                            <p class="card-text">
+                                Kaixomundua.eus es un proyecto educativo que promueve las competencias digitales y la creación 
+                                de contenido en euskera. Los estudiantes crean sus propios sitios web y aprenden a ser creadores 
+                                digitales, en lugar de solo consumidores.</p>
                             <button class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#modalKaixomundua">Más información</button>
                         </div>
@@ -109,7 +122,12 @@
                             </div>
                             <div class="modal-body">
                                 <img src="./fotos/KRISEILU.png" class="img-fluid mb-3" alt="Imagen de Kaixomundua">
-                                Información detallada sobre el proyecto Kaixomundua.
+                                Kriseilu es el proyecto que desarrollamos para este concurso y lo hicimos con el propósito 
+                                de promover el euskera mediante la creación de una página web. En esta plataforma, ofrecemos 
+                                grupos de música, programas de radio y periódicos en euskera, creando así un espacio donde 
+                                los usuarios pueden buscar todo lo que necesiten de una forma muy sencilla. Este proyecto nos 
+                                permitió aplicar nuestras habilidades en diseño web, y a la vez contribuir al fomento de 
+                                nuestra lengua y cultura.
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
