cambiar sobre mi

--- a/index.html
+++ b/index.html
@@ -40,16 +40,29 @@
             <h2>Sobre mí</h2>
             <p>Hola, soy Nahia Labiano Etulain tengo 18 años y soy estudiante de Administración de Sistemas Informáticos
                 en Red en CIP Cuatrovientos.</p>
-            <p>Soy una persona a la que le encanta viajar y me encantaría poder visitar todo el mundo. Por ahora no he
-                podido visitar muchos países pero espero que dentro de unos años esto cambie.</p>
+            <p>Me encanta viajar y tengo la meta de conocer tantos lugares como pueda. Viajar no solo me abre la mente, 
+                sino que también me permite conocer gente nueva y aprender de diferentes culturas, lo cual es una de mis 
+                grandes pasiones. Hay algo realmente especial en descubrir nuevos lugares, probar comidas diferentes y 
+                ver cómo vive la gente en distintas partes del mundo. Cada viaje es una aventura y una oportunidad para 
+                crecer y expandir mis perspectivas.</p>
+            <p>La música es otro de mis grandes intereses; siempre estoy en busca de nuevas canciones y artistas para 
+                descubrir. La música me relaja, me inspira y es una excelente compañía mientras estudio. Ya sea que esté 
+                escuchando algo tranquilo para concentrarme mejor o algo enérgico para animarme, la música siempre tiene
+                 un papel importante en mi vida cotidiana. Me encanta cómo puede cambiar mi estado de ánimo y motivarme 
+                 a seguir adelante, sin importar lo que esté haciendo.</p>
+            <p>Me encanta aprender cosas nuevas, no importa de qué se trate. Ya sea probando cosas por mí misma, hablando 
+                con gente o investigando un poco, creo que el conocimiento es poder y siempre hay algo nuevo que descubrir. 
+                Me gusta adquirir habilidades y encontrar información útil para mi vida y carrera. No tengo preferencias 
+                específicas; desde tecnología y ciencia hasta arte y humanidades, me encanta explorar una variedad de temas 
+                y crecer continuamente. </p>
             <h2>Estudios</h2>
             <p>
                 <i class="bi bi-check-square"></i>
-                Bachiller en Lekaroz BHI
+                Bachiller - Lekaroz BHI
             </p>
             <p>
                 <i class="bi bi-arrow-clockwise"></i>
-                Grado Superior en Administración de Sistemas Informáticos en Red en CIP Cuatrovientos
+                Grado Superior en Administración de Sistemas Informáticos en Red - CIP Cuatrovientos
             </p>
         </div>
     </section>
