cambio de informacion de los proyectos

--- a/index.html
+++ b/index.html
@@ -98,11 +98,13 @@
                                 I3 es el proyecto que desarrollamos en colaboración entre Cuatrovientos y Salesianos Pamplona. 
                                 El propósito de este proyecto es crear soluciones tecnológicas que aborden diversas problemáticas 
                                 en el entorno educativo y comunitario, especialmente dirigidas a personas con dificultades. 
-                                Mediante un enfoque de Aprendizaje y Servicio intermodular, interciclos e intercentros, los 
-                                estudiantes de ambos centros trabajan juntos para desarrollar soluciones electrónicas y digitales 
-                                que mejoren la accesibilidad y el bienestar de las personas en su comunidad. Este proyecto nos 
-                                permitió aplicar nuestras habilidades en tecnología y diseño, al mismo tiempo que contribuimos a la 
-                                mejora de nuestra comunidad local. Fue una experiencia muy enriquecedora y significativa.
+                                Aunque I3 está principalmente enfocado en las aulas, hay un proyecto específico que va dirigido a 
+                                las personas mayores, mejorando su acceso a la tecnología y su calidad de vida. Mediante un enfoque 
+                                de Aprendizaje y Servicio intermodular, interciclos e intercentros, los estudiantes de ambos centros 
+                                trabajan juntos para desarrollar soluciones electrónicas y digitales que mejoren la accesibilidad y 
+                                el bienestar de las personas en su comunidad. Este proyecto nos permitió aplicar nuestras habilidades 
+                                en tecnología y diseño, al mismo tiempo que contribuimos a la mejora de nuestra comunidad local. Fue 
+                                una experiencia muy enriquecedora y significativa.
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
@@ -136,11 +138,13 @@
                             <div class="modal-body">
                                 <img src="./fotos/KRISEILU.png" class="img-fluid mb-3" alt="Imagen de Kaixomundua">
                                 Kriseilu es el proyecto que desarrollamos para este concurso y lo hicimos con el propósito 
-                                de promover el euskera mediante la creación de una página web. En esta plataforma, ofrecemos 
-                                grupos de música, programas de radio y periódicos en euskera, creando así un espacio donde 
-                                los usuarios pueden buscar todo lo que necesiten de una forma muy sencilla. Este proyecto nos 
-                                permitió aplicar nuestras habilidades en diseño web, y a la vez contribuir al fomento de 
-                                nuestra lengua y cultura.
+                                de promover el euskera mediante la creación de una página web. En esta página web, ofrecemos 
+                                música, programas de radio y periódicos en euskera, creando así un espacio donde los usuarios 
+                                pueden buscar todo lo que necesiten de una forma muy sencilla. También contamos con un calendario 
+                                de eventos para promover el euskera, como la Korrika o Nafarroa Oinez, donde la gente puede 
+                                informarse sobre los eventos y ser dirigidos a los enlaces de las páginas originales para más 
+                                detalles. Este proyecto nos permitió aplicar nuestras habilidades en diseño web, y a la vez 
+                                contribuir al fomento de nuestra lengua y cultura.
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
