--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         body {
             background-color: whitesmoke;
         }
+        
         h2 {
             font-family: 'Lora', serif;
             font-weight: bold;
@@ -81,7 +82,6 @@
         <div class="container">
             <h2>Proyectos</h2>
             <div class="row">
-                <!-- Proyecto I^3 -->
                 <div class="col-md-6">
                     <div class="card">
                         <img src="./fotos/664635acbd6dc.jpeg" class="card-img-top" alt="Imagen de I3">
@@ -101,8 +101,7 @@
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h5 class="modal-title" id="modalI3Label">I3</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                    aria-label="Close"></button>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
                                 <img src="./fotos/664635acbd6dc.jpeg" class="img-fluid mb-3" alt="Imagen de I^3">
@@ -132,8 +131,7 @@
                                 Kaixomundua.eus es un proyecto educativo que promueve las competencias digitales y la creación 
                                 de contenido en euskera. Los estudiantes crean sus propios sitios web y aprenden a ser creadores 
                                 digitales, en lugar de solo consumidores.</p>
-                            <button class="btn btn-primary" data-bs-toggle="modal"
-                                data-bs-target="#modalKaixomundua">Más información</button>
+                            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalKaixomundua">Más información</button>
                         </div>
                     </div>
                 </div>
@@ -143,8 +141,7 @@
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h5 class="modal-title" id="modalKaixomunduaLabel">Kaixomundua</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                    aria-label="Close"></button>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
                                 <img src="./fotos/KRISEILU.png" class="img-fluid mb-3" alt="Imagen de Kaixomundua">
